# coderlm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugin/: generate.py  package.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: coderlm.md
plugin/hooks/: hooks.json
plugin/skills/coderlm/: SKILL.md
plugin/skills/coderlm/references/: api-reference.md
plugin/skills/coderlm/scripts/: coderlm_cli.py
plugin/templates/: INSTRUCTIONS.md
server/: Cargo.toml  REPL_to_API.md
server/src/: config.rs  lib.rs  main.rs
server/src/index/: file_entry.rs  file_tree.rs  walker.rs  watcher.rs
server/src/ops/: annotations.rs  content.rs  history.rs  mod.rs  stats.rs  structure.rs  symbol_ops.rs
server/src/server/: mod.rs  routes.rs  session.rs  state.rs
server/src/symbols/: mod.rs  parser.rs  symbol.rs
server/src/symbols/queries/: mod.rs  vue.rs
server/tests/: integration_test.rs
