[project]
name = "coderlm"
version = "0.1.4"
description = "Generate CodeRLM instruction files for AI coding platforms"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[project.scripts]
coderlm = "coderlm_generate.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugin"]

[tool.hatch.build.targets.wheel.sources]
"plugin" = "coderlm_generate"
